site specific fixes

--- a/_pages/jummal-dating.html
+++ b/_pages/jummal-dating.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: "Jummal Calculator"
-permalink: jummal-calculator
+title: "Jummal Dating"
+permalink: jummal-dating
 show-title: true
 ---
 
@@ -11,145 +11,141 @@ show-title: true
 
 <div class="w-full flex flex-col justify-start items-center">
     <div class="w-80 flex flex-col justify-start items-center">
-        <div class="border-y  w-full border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-y  w-full border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">Letter <br /> الحرف</div>
             <div class="text-center w-full">Jummal Value <br /> القيمة العددية</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">1</div>
             <div class="text-center w-full">أ</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">1</div>
             <div class="text-center w-full">ا</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">1</div>
             <div class="text-center w-full">ء</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">1</div>
             <div class="text-center w-full">ئ</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">1</div>
             <div class="text-center w-full">ؤ</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">2</div>
             <div class="text-center w-full">ب</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">3</div>
             <div class="text-center w-full">ج</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">4</div>
             <div class="text-center w-full">د</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">5</div>
             <div class="text-center w-full">ه</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">5</div>
             <div class="text-center w-full">ة</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">6</div>
             <div class="text-center w-full">و</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">7</div>
             <div class="text-center w-full">ز</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">8</div>
             <div class="text-center w-full">ح</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">9</div>
             <div class="text-center w-full">ط</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">10</div>
             <div class="text-center w-full">ي</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">20</div>
             <div class="text-center w-full">ك</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">30</div>
             <div class="text-center w-full">ل</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">40</div>
             <div class="text-center w-full">م</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">50</div>
             <div class="text-center w-full">ن</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">60</div>
             <div class="text-center w-full">س</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">70</div>
             <div class="text-center w-full">ع</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">80</div>
             <div class="text-center w-full">ف</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">90</div>
             <div class="text-center w-full">ص</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">100</div>
             <div class="text-center w-full">ق</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">200</div>
             <div class="text-center w-full">ر</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">300</div>
             <div class="text-center w-full">ش</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">400</div>
             <div class="text-center w-full">ت</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">500</div>
             <div class="text-center w-full">ث</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">600</div>
             <div class="text-center w-full">خ</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">700</div>
             <div class="text-center w-full">ذ</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">800</div>
             <div class="text-center w-full">ض</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">900</div>
             <div class="text-center w-full">ظ</div>
         </div>
-        <div class="border-b  w-full w-full flex flex-row justify-around items-center">
+        <div class="border-b w-full flex flex-row justify-around items-center">
             <div class="text-center w-full border-r">100</div>
             <div class="text-center w-full">غ</div>
         </div>
     </div>
 </div>
-
-<p>Jummal Calculator: (type your text in the first box and press enter!)</p>
-
-<p><iframe frameborder="0" height="337" scrolling="no" src="https://bc0-my.sharepoint.com/personal/sawank_bc_edu/_layouts/15/Doc.aspx?sourcedoc={c59b75cb-9741-434a-9fea-b8a081c45d6a}&amp;action=embedview&amp;wdAllowInteractivity=False&amp;AllowTyping=True&amp;ActiveCell='%D9%88%D8%B1%D9%82%D8%A91'!A1&amp;Item='%D9%88%D8%B1%D9%82%D8%A91'!A1%3AA2&amp;wdHideGridlines=True&amp;wdDownloadButton=True&amp;wdInConfigurator=True&amp;wdInConfigurator=True&amp;edesNext=false&amp;ejss=false" style="height: 336.999px;" width="472"></iframe></p>
